# artic-plugin-zoo

./: .gitignore  Makefile  backend.c  main.art
cached-compute/: CMakeLists.txt  Makefile  cache-plugin.cpp  cache-util.cpp  main.art
cached-compute/plugin/: CMakeLists.txt  cache.cpp
cuda_reductions/: CMakeLists.txt  main.art  plugin.cpp  run.res
docker/: Dockerfile  config.sh  patch-and-make.sh
dynamic-arrays/: CMakeLists.txt  Makefile  dynamic_arrays.cpp  main.art  util.cpp
dynamic-arrays/plugin/: CMakeLists.txt
extern_language/: CMakeLists.txt  Makefile  main.art
extern_language/plugin/: CMakeLists.txt  extern_language.cpp
ir-extension/: CMakeLists.txt  extension.cpp  main.art
ir-extension/plugin/: CMakeLists.txt
merge_sort/: main.art  memory.cpp
plugin-memory/: CMakeLists.txt  Makefile  main.art  run.res
plugin-memory/plugin/: CMakeLists.txt  memory.cpp
recorder/: CMakeLists.txt  Makefile  main.art  recorder.cpp
recorder-with-shared/: main.art
recorder-with-shared/plugin/: CMakeLists.txt  recorder.cpp
recorder/plugin/: recorder.cpp
reference/: Makefile
reference/cached-compute/: CMakeLists.txt  main.art  run.res
reference/dynamic-arrays/: main.art  run.res
reference/merge_sort/: main.art  run.res  test_results.py
reference/plugin-memory/: CMakeLists.txt  main.art
reference/recorder/: main.art
reference/shared_offset/: main.art
reference/test-plugin/: CMakeLists.txt  main.art  run.res
reflection/: CMakeLists.txt  main.art  run.res  serdes.cpp  util.c
select_on_user/: CMakeLists.txt  main.art  plugin.cpp  run.res
shared_offset/: CMakeLists.txt  main.art  memory.cpp  run.res
test-plugin/: CMakeLists.txt  Makefile  main.art
test-plugin/test_plugin/: CMakeLists.txt  test.cpp
test_plugin/: CMakeLists.txt  makesetup  test.cpp
vector-ops/: CMakeLists.txt  Makefile  main.art  run.args
vector-ops/plugin/: extension.cpp
